Added journal bootstrap theme

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,18 @@
       If necessary, shut down and then lift your app again.
       
     -->
+      
+      <!--SCRIPTS-->
+      
+      <!--SCRIPTS END-->
+
+      <!--STYLES-->
+      <link rel="stylesheet" href="/linker/styles/bootstrap.css">
+      <!--STYLES END-->
+
+      <!--TEMPLATES-->
+      
+      <!--TEMPLATES END-->
 
   </head>
 
