--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,7 +34,10 @@
     -->
       
       <!--SCRIPTS-->
-      
+      <script src="/linker/js/jquery.js"></script>
+      <script src="/linker/js/jquery.min.js"></script>
+      <script src="/linker/js/bootstrap.js"></script>
+      <script src="/linker/js/bootstrap.min.js"></script>
       <!--SCRIPTS END-->
 
       <!--STYLES-->
@@ -48,61 +51,132 @@
   </head>
 
   <body>
+    <div class="container">
+        <!-- Navbar
+        ================================================== -->
+        <div class="bs-docs-section clearfix">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="page-header" id="banner">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <h1>Journal</h1>
+                    <p class="lead">Crisp like a new sheet of paper</p>
+                  </div>
+                </div>
+            </div>
 
-    <!-- Include the view file for the current controller/route -->
-    <%- body %>
+            <div class="bs-example">
+              <div class="navbar navbar-default">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#">Brand</a>
+                </div>
+                <div class="navbar-collapse collapse navbar-responsive-collapse">
+                  <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Active</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Dropdown header</li>
+                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">One more separated link</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <form class="navbar-form navbar-left">
+                    <input type="text" class="form-control col-lg-8" placeholder="Search">
+                  </form>
+                  <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Link</a></li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div><!-- /.nav-collapse -->
+              </div><!-- /.navbar -->
+            </div><!-- /example -->
+
+          </div>
+        </div>
+        </div>
+
+        <!-- Include the view file for the current controller/route -->
+        <%- body %>
 
 
-    <!--
+        <!--
 
-      Client-side Javascript
-      ========================
+          Client-side Javascript
+          ========================
 
-      You can import any js files in your `assets` directory as you would 
-      normally: using <script></script> tags.
+          You can import any js files in your `assets` directory as you would 
+          normally: using <script></script> tags.
 
-      Here's an example of importing a few dependencies, in order:
-    -->
-    <!-- Bring in the socket.io client -->
-    <script type="text/javascript" src="/js/socket.io.js"></script>
-    <!-- then beef it up with some convenience logic for talking to Sails.js -->
-    <script type="text/javascript" src="/js/sails.io.js"></script>
-    <!-- listen on socket.io for incoming messages -->
-    <script type="text/javascript" src="/js/app.js"></script>
+          Here's an example of importing a few dependencies, in order:
+        -->
+        <!-- Bring in the socket.io client -->
+        <script type="text/javascript" src="/js/socket.io.js"></script>
+        <!-- then beef it up with some convenience logic for talking to Sails.js -->
+        <script type="text/javascript" src="/js/sails.io.js"></script>
+        <!-- listen on socket.io for incoming messages -->
+        <script type="text/javascript" src="/js/app.js"></script>
 
-    <!-- Your scripts here? -->
-    <!-- Your scripts here? -->
-    <!-- Your scripts here? -->
-
-
-    <!--
-
-      Looking for client-side CoffeeScript or TypeScript?
-      ================================================
-
-      CoffeeScript and TypeScript precompilation are not installed by default,
-      but if you'd like to mix those features in, it is straightforward to
-      `npm install` the relevant grunt community modules and modify your Gruntfile
-      to use them.
-
-    -->
+        <!-- Your scripts here? -->
+        <script>
+             $(document).ready(function(){
+                $('.dropdown-toggle').dropdown()
+            });
+        </script>
+        <!-- Your scripts here? -->
+        <!-- Your scripts here? -->
 
 
+        <!--
 
-    <!--
+          Looking for client-side CoffeeScript or TypeScript?
+          ================================================
 
-      Another way: The Asset Linker
-      ========================
+          CoffeeScript and TypeScript precompilation are not installed by default,
+          but if you'd like to mix those features in, it is straightforward to
+          `npm install` the relevant grunt community modules and modify your Gruntfile
+          to use them.
 
-      Sails supports a Grunt-based asset linker, to automatically inject 
-      <link> and <script> tags, as well any client-side templates you're using
-      into your HTML layouts and views, respecting dependencies.
+        -->
 
-      You created this Sails app with the asset linker disabled.
-      If you change your mind, check out the docs on the subject:
-      http://sailsjs.org/#!documentation/asset-management
 
-    -->
+
+        <!--
+
+          Another way: The Asset Linker
+          ========================
+
+          Sails supports a Grunt-based asset linker, to automatically inject 
+          <link> and <script> tags, as well any client-side templates you're using
+          into your HTML layouts and views, respecting dependencies.
+
+          You created this Sails app with the asset linker disabled.
+          If you change your mind, check out the docs on the subject:
+          http://sailsjs.org/#!documentation/asset-management
+
+        -->
+    </div>
 
     </body>
 </html>
