--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,6 +42,7 @@
 
       <!--STYLES-->
       <link rel="stylesheet" href="/linker/styles/bootstrap.css">
+      <link rel="stylesheet" href="/linker/styles/bootstrap.min.css">
       <!--STYLES END-->
 
       <!--TEMPLATES-->
@@ -176,6 +177,21 @@
           http://sailsjs.org/#!documentation/asset-management
 
         -->
+        <footer>
+            <div class="row">
+              <div class="col-lg-12">
+                <ul class="list-inline">
+                  <li class="pull-right"><a href="#top">Back to top</a></li>
+                  <li><a href="http://news.bootswatch.com" onclick="pageTracker._link(this.href); return false;">Blog</a></li>
+                  <li><a href="http://feeds.feedburner.com/bootswatch">RSS</a></li>
+                  <li><a href="https://twitter.com/thomashpark">Twitter</a></li>
+                  <li><a href="https://github.com/thomaspark/bootswatch/">GitHub</a></li>
+                  <li><a href="../help/#api">API</a></li>
+                  <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=F22JEM3Q78JC2">Donate</a></li>
+                </ul>
+              </div>
+            </div>
+      </footer>
     </div>
 
     </body>
