--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -61,7 +61,7 @@
             <div class="page-header" id="banner">
                 <div class="row">
                   <div class="col-lg-6">
-                    <h1>Journal</h1>
+                    <h1>Forum</h1>
                     <p class="lead">Crisp like a new sheet of paper</p>
                   </div>
                 </div>
