--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -9,53 +9,17 @@
         <div class="bs-example table-responsive">
           <table class="table table-striped table-hover ">
             <tr>
-              <th>#</th>
-              <th>Column heading</th>
-              <th>Column heading</th>
-              <th>Column heading</th>
+              <th>First Name</th>
+              <th>Last Name</th>
+              <th>Email</th>
             </tr>
-            <tr>
-              <td>1</td>
-              <td>Column content</td>
-              <td>Column content</td>
-              <td>Column content</td>
+            <% for (user in users) { %>
+              <tr>
+                <td><%= users[user].firstName %></td>
+                <td><%= users[user].lastName %></td>
+                <td><%= users[user].email %></td>
             </tr>
-            <tr>
-              <td>2</td>
-              <td>Column content</td>
-              <td>Column content</td>
-              <td>Column content</td>
-            </tr>
-            <tr class="info">
-              <td>3</td>
-              <td>Column content</td>
-              <td>Column content</td>
-              <td>Column content</td>
-            </tr>
-            <tr class="success">
-              <td>4</td>
-              <td>Column content</td>
-              <td>Column content</td>
-              <td>Column content</td>
-            </tr>
-            <tr class="danger">
-              <td>5</td>
-              <td>Column content</td>
-              <td>Column content</td>
-              <td>Column content</td>
-            </tr>
-            <tr class="warning">
-              <td>6</td>
-              <td>Column content</td>
-              <td>Column content</td>
-              <td>Column content</td>
-            </tr>
-            <tr class="active">
-              <td>7</td>
-              <td>Column content</td>
-              <td>Column content</td>
-              <td>Column content</td>
-            </tr>
+            <% } %>
           </table>
         </div><!-- /example -->
       </div>
