--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,6 +38,7 @@
       <script src="/linker/js/jquery.min.js"></script>
       <script src="/linker/js/bootstrap.js"></script>
       <script src="/linker/js/bootstrap.min.js"></script>
+      <script src="/linker/js/form.js"></script>
       <!--SCRIPTS END-->
 
       <!--STYLES-->
@@ -98,9 +99,9 @@
                     <input type="text" class="form-control col-lg-8" placeholder="Search">
                   </form>
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
+                    <% if (res.locals.user) { %>
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= res.locals.user.firstName %> <%= res.locals.user.lastName %> <b class="caret"></b></a>
                       <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -109,6 +110,10 @@
                         <li><a href="#">Separated link</a></li>
                       </ul>
                     </li>
+                    <% } else { %>
+                      <li><a href="/Users/signup">Register</a></li>
+                      <li><a href="/Users/login">Login</a></li>
+                    <% } %>
                   </ul>
                 </div><!-- /.nav-collapse -->
               </div><!-- /.navbar -->
