--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,39 +1,19 @@
 <div class="bs-docs-section">
-
+        <% if (errors && errors.ServerError) { %>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="alert alert-dismissable alert-danger">
+              <%= errors.ServerError %>
+            </div>
+          </div>
+        </div>
+        <% } %>
         <div class="row">
           <div class="col-lg-6">
             <div class="well">
-              <form class="bs-example form-horizontal" method="post" action="create">
+              <form class="bs-example form-horizontal" method="post" action="authenticate">
                 <fieldset>
-                  <legend>Register</legend>
-                  <% if(errors && errors.firstName) { %>
-                  <div class="form-group has-error">
-                  <% } else { %>
-                  <div class="form-group">
-                  <% } %>
-                    <label for="firstName" class="col-lg-3 control-label">First Name</label>
-                    <div class="col-lg-8">
-                      <% if(errors) { %>
-                      <input type="text" class="form-control" id="firstName" name="firstName" value="<%= data.firstName %>">
-                      <% } else { %>
-                      <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
-                      <% } %>
-                    </div>
-                  </div>
-                  <% if(errors && errors.lastName) { %>
-                  <div class="form-group has-error">
-                  <% } else { %>
-                  <div class="form-group">
-                  <% } %>
-                    <label for="lastName" class="col-lg-3 control-label">Last Name</label>
-                    <div class="col-lg-8">
-                      <% if(errors) { %>
-                      <input type="text" class="form-control" id="lastName" name="lastName" value="<%= data.lastName %>">
-                      <% } else { %>
-                      <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
-                      <% } %>
-                    </div>
-                  </div>
+                  <legend>Login</legend>
                   <% if(errors && errors.email) { %>
                   <div class="form-group has-error">
                   <% } else { %>
@@ -61,7 +41,7 @@
                   </div>
                   <div class="form-group">
                     <div class="col-lg-10 col-lg-offset-2">
-                      <button class="btn btn-default btn-login">Login</button>
+                      <button class="btn btn-default btn-register">Register</button>
                       <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
                   </div>
