--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -99,9 +99,9 @@
                     <input type="text" class="form-control col-lg-8" placeholder="Search">
                   </form>
                   <ul class="nav navbar-nav navbar-right">
-                    <% if (res.locals.user) { %>
+                    <% if (sails.config.userdata.authenticated) { %>
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= res.locals.user.firstName %> <%= res.locals.user.lastName %> <b class="caret"></b></a>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= sails.config.userdata.user.firstName %> <%= sails.config.userdata.user.lastName %> <b class="caret"></b></a>
                       <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
