Added logout functionality

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -107,7 +107,7 @@
                         <li><a href="#">Another action</a></li>
                         <li><a href="#">Something else here</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a href="/Users/logout">Logout</a></li>
                       </ul>
                     </li>
                     <% } else { %>
